# game-engine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: core.h
engine/platform/windows/: windows-window.cpp  windows-window.h  windows.cpp
engine/system/: application.cpp  application.h  window.h
test-client/: CMakeLists.txt  test-client.cpp  test-client.h
